tests/lean/import_invalid_tk.lean.expected.out
import_invalid_tk.lean:1:21: error: invalid binary digit
@[reducible]
def bitvec : ℕ → Type :=
λ (n : ℕ), vector bool n
