tests/lean/import_invalid_tk.lean
import data.bitvec 0b311

print bitvec
